--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,12 @@
       </exclusions>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
 
   <build>
