--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>16.0</version>
+      <version>21.0</version>
     </dependency>
 
     <dependency>
@@ -248,6 +248,25 @@
       <version>4.7</version>
     </dependency>
 
+    <!--calcite-->
+    <!-- https://mvnrepository.com/artifact/org.apache.calcite.avatica/avatica -->
+    <dependency>
+      <groupId>org.apache.calcite.avatica</groupId>
+      <artifactId>avatica</artifactId>
+      <version>1.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.calcite</groupId>
+      <artifactId>calcite-core</artifactId>
+      <!--<exclusions>
+        <exclusion>
+          <groupId>org.apache.calcite.avatica</groupId>
+          <artifactId>avatica-core</artifactId>
+        </exclusion>
+      </exclusions>-->
+      <version>1.12.0</version>
+    </dependency>
+
     <!-- hive -->
     <dependency>
       <groupId>org.apache.hive</groupId>
@@ -270,8 +289,13 @@
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.calcite.avatica</groupId>
+          <artifactId>avatica-core</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
+
 
     <dependency>
       <groupId>com.alibaba</groupId>
