--- a/pom.xml
+++ b/pom.xml
@@ -330,6 +330,12 @@
       <artifactId>lombok</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-reflect</artifactId>
+      <version>2.10.3</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
